# workshop

./: .gitignore  Cargo.toml  README.md  STATE_MACHINE.md  USER_GUIDE.md  WORKSHOP_AUTHORING.md  check_example.rs  python.cast  workshop.cast
.github/workflows/: release-check.yml  releaser.yml
app/: Cargo.toml
app/src/: config.rs  error.rs  fs.rs  lib.rs  log.rs
app/src/fs/: lazy_loader.rs
app/src/models/: lesson.rs  workshop.rs
app/src/ui/: tui.rs
app/src/ui/tui/: events.rs  screens.rs  ui.rs  widgets.rs
app/src/ui/tui/screens/: lessons.rs  license.rs  log.rs  programming.rs  set_default.rs  spoken.rs  workshops.rs
app/src/ui/tui/widgets/: scrolltext.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  engine.rs  error.rs  fs.rs  lazy_loader.rs  lesson.rs  lib.rs  log.rs  message.rs  state.rs  workshop.rs
crates/languages/: Cargo.toml
crates/languages/src/: error.rs  lib.rs  programming.rs  spoken.rs
examples/example-workshop/: LICENSE  defaults.yaml
examples/example-workshop/en/: description.md  workshop.md
examples/example-workshop/en/rs/: deps.py  lessons.yaml  setup.md
examples/example-workshop/en/rs/01-hello-world/: check.py  lesson.md  log.txt
examples/example-workshop/en/rs/01-hello-world/app/: Dockerfile
examples/example-workshop/en/rs/01-just-compile/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
examples/example-workshop/en/rs/02-hello-world/: lesson.md
examples/example-workshop/en/rs/02-hello-world/app/: Dockerfile
examples/example-workshop/hi/: description.md  workshop.yaml  कार्यशाला.md
examples/example-workshop/hi/py/: deps.py  setup.md
examples/example-workshop/hi/py/01-hello-world/: docker-compose.yaml  lesson.md
examples/example-workshop/hi/py/01-hello-world/app/: Dockerfile
examples/example-workshop/hi/rs/: deps.py  setup.md
examples/example-workshop/it/: description.md  seminario.md  workshop.yaml
examples/example-workshop/it/py/: deps.py  setup.md
examples/example-workshop/it/py/01-hello-world/: check.py  lesson.md  lesson.yaml
examples/example-workshop/it/py/01-hello-world/app/: Dockerfile
src/: app.rs  command.rs  config.rs  error.rs  fs.rs  languages.rs  lib.rs  log.rs  models.rs  status.rs
src/fs/: error.rs  lazy_loader.rs  utils.rs
src/languages/: error.rs  programming.rs  spoken.rs
src/models/: error.rs  lesson.rs  workshop.rs
src/ui/: tui.rs
src/ui/tui/: events.rs  screens.rs  ui.rs  widgets.rs
src/ui/tui/screens/: lesson.rs  lessons.rs  license.rs  log.rs  programming.rs  set_default.rs  spoken.rs  welcome.rs  workshops.rs
src/ui/tui/widgets/: lessonbox.rs  scrollbox.rs  scrolllog.rs  scrolltext.rs  statusbar.rs
