[workspace]
resolver = "2"
default-members = ["app", "crates/engine", "crates/languages"]
members = [
    "app",
    "crates/engine",
    "crates/languages",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "A toolkit for authoring and presenting programming workshops"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
  'cfg(fuzzing)'
]}

[workspace.dependencies]
# local crates
engine = { path = "crates/engine" }
languages = { path = "crates/languages" }

# external crates
async-trait = "0.1.88"
futures = "0.3.31"
futures-timer = "3.0.3"
markdown = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.12"
tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webbrowser = "1.0.4"

#anyhow = "1.0"
#clap = { version = "4.4", features = ["derive"] }
#crossterm = { version = "0.29", features = ["event-stream", "events"] }
#indicatif = "0.17"
#open = "5.0"
#pulldown-cmark = "0.13"
#ratatui = "0.29"
#regex = "1.9"
#syntect = "5.0"

