[package]
name = "workshop"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "workshop"
path = "src/bin/workshop.rs"

[dependencies]
# local crates
engine.workspace = true
languages.workspace = true

# external crates
anyhow = "1.0.98"
async-trait.workspace = true
clap = { version = "4.5.37", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream", "events"] }
directories = "6.0"
futures.workspace = true
futures-timer.workspace = true
markdown.workspace = true
pulldown-cmark = "0.13"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde.workspace = true
serde_yaml.workspace = true
syntect = "5.2.0"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webbrowser.workspace = true
textwrap = "0.16.2"
